--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   adapter: mysql2
   database: contacts
   username: root
-  password: ac0rnfalls
+  password: tree
   pool: 5
   timeout: 5000
 
